--- a/03-facade-begin/src/Main.mxml
+++ b/03-facade-begin/src/Main.mxml
@@ -1,39 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
-			   xmlns:s="library://ns.adobe.com/flex/spark"
-			   xmlns:lib="some.external.lib.*" xmlns:classes="some.useful.classes.*">
-	<fx:Script>
+               xmlns:s="library://ns.adobe.com/flex/spark"
+               xmlns:lib="some.external.lib.*" xmlns:classes="some.useful.classes.*">
+    <fx:Script>
 		<![CDATA[
+        import some.external.lib.BoardItem;
 
-		[Bindable]
-		private var pointString:String = '{"x1":100,"y1":100,"x2":150,"y2":150}';
+        [Bindable]
+        private var pointString:String = '{"x1":100,"y1":100,"x2":150,"y2":150}';
 
-		protected function drawLineGroupButton_clickHandler(event:MouseEvent):void {
-			var point:Object = JSON.parse(pointString);
-			lineGroup.draw(point.x1, point.x2, point.y1, point.y2);
-		}
-
-		protected function drawBoardButton_clickHandler(event:MouseEvent):void {
-			var point:Object = JSON.parse(pointString);
-			//How to draw lines to a Board? Write your client code here!
-		}
-		]]>
+        protected function drawBoardButton_clickHandler(event:MouseEvent):void {
+            var point:Object = JSON.parse(pointString);
+            var bi:BoardItem = new BoardItem();
+            board.drawBoardItem(bi, point.x1, point.x2, point.y1, point.y2, textInput.text);
+        }
+        ]]>
 	</fx:Script>
 
-	<s:layout>
-		<s:VerticalLayout/>
-	</s:layout>
+    <s:layout>
+        <s:VerticalLayout/>
+    </s:layout>
 
-	<s:FormItem label="Input (x1,y1,x2,y2)">
-		<s:TextArea text="{pointString}"/>
-	</s:FormItem>
-	<s:Button id="drawLineGroupButton" label="Draw to line group" click="drawLineGroupButton_clickHandler(event)"/>
-	<classes:LineGroup id="lineGroup" height="200"/>
-	<s:Button id="drawBoardButton" label="Draw to board" click="drawBoardButton_clickHandler(event)"/>
-	<lib:Board id="board" width="100%" height="200"
-			   title="How to draw to the Board using the LineGroup???">
-		<lib:layout>
-			<s:HorizontalLayout/>
-		</lib:layout>
-	</lib:Board>
+    <s:FormItem label="Input (x1,y1,x2,y2)">
+        <s:TextArea id="textArea" text="{pointString}"/>
+    </s:FormItem>
+    <s:HGroup>
+        <s:Button id="drawBoardButton" label="Draw item to board" click="drawBoardButton_clickHandler(event)"/>
+        <s:TextInput id="textInput" text="The quick brown fox"/>
+    </s:HGroup>
+
+    <lib:Board id="board" width="100%" height="200"
+               title="How to draw to the Board using the LineGroup???">
+        <lib:layout>
+            <s:HorizontalLayout/>
+        </lib:layout>
+    </lib:Board>
 </s:Application>
