--- a/09-decorator-begin/src/Main.mxml
+++ b/09-decorator-begin/src/Main.mxml
@@ -8,7 +8,7 @@
     <fx:Script><![CDATA[
         import my.patterns.runwaymodels.Model;
 
-        import utils.ImageUtil;
+        import utils.ClothingUtil;
 
         import my.patterns.runwaymodels.Model;
 
@@ -43,10 +43,9 @@
             goCatwalk(ensemble[0]);
         }
 
-        private function getDressed(modelAndClothes:Array):String
-        {
+        private function getDressed(modelAndClothes:Array):String {
             var s:String = "";
-            for each (var m:Model in modelAndClothes){
+            for each (var m:Model in modelAndClothes) {
                 s += m.getDressed();
             }
             return s;
@@ -59,20 +58,20 @@
         }
 
         private function goCatwalk(modelName:String):void {
-            var imageUtil:ImageUtil = ImageUtil.getInstance();
-            if (imageUtil.hasOwnProperty(modelName)) {
+            var prepareModel:Class = ClothingUtil.getInstance().prepareToCatwalk(modelName);
+            if (prepareModel) {
                 var modelImage:Image = new Image();
-                modelImage.source = imageUtil[modelName];
+                modelImage.source = prepareModel;
                 this.addElementAt(modelImage, 0);
             }
         }
 
-        private function clothesOn(outfit:String):void {
-            var imageUtil:ImageUtil = ImageUtil.getInstance();
-            if (imageUtil.hasOwnProperty(outfit)) {
-                var clothier:Image = new Image();
-                clothier.source = imageUtil[outfit];
-                clothesGroup.addElement(clothier);
+        private function clothesOn(cloth:String):void {
+            var preparedCloth:Class = ClothingUtil.getInstance().prepareToCatwalk(cloth);
+            if (preparedCloth != null) {
+                var modelImage:Image = new Image();
+                modelImage.source = preparedCloth;
+                clothesGroup.addElement(modelImage);
             }
         }
         ]]></fx:Script>
